[package]
name = "adios-model-performance-monitoring"
version = "0.1.0"
edition = "2021"
description = "AdiOS model-performance-monitoring plugin"
license = "MIT"
repository = "https://github.com/tridentbiz/adios-model-performance-monitoring"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
